--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "mp3": [
       {
         "src": "/3107full.mp3",
-        "name": "3107 Full version",
+        "name": "3107",
         "singer":"W/n x DuongG, Nâu , Titie, Erik",
         "image": "https://i.ytimg.com/vi/GatNL0mmQGc/maxresdefault.jpg"
       },
